# courier-client

./: .gitignore  CMakeLists.txt  Interface.md  README.md  main.cpp
Logic-Part/: CMakeLists.txt
Logic-Part/class/: ChatInfo.cpp  ChatInfo.h  PacketInfo.cpp  PacketInfo.h  UserInfo.cpp  UserInfo.h
Logic-Part/src/: LinkToServer.cpp  Logic_Part.cpp  UI_Part.h
Logic_Part/: .gitignore  CMakeLists.txt  Dealer.cpp  Dealer.h  main.cpp
Logic_Part/FeverRPC/: .gitignore  CMakeLists.txt
Logic_Part/Server-Interface/: AccountHandle.cpp  AccountHandle.h  ChatHandle.h  LinkToServer.h  Logic_Part.h  UserHandle.h
Logic_Part/UI-Interface/: ChatInfo.cpp  ChatInfo.h  DateTime.h  GroupInfo.cpp  GroupInfo.h  MessageInfo.cpp  MessageInfo.h  PacketInfo.cpp  PacketInfo.h  UserInfo.cpp  UserInfo.h  predeclare.h
Logic_Part/class/: ChatInfo.cpp  ChatInfo.h  DateTime.h  GlobalVar.h  GroupInfo.cpp  GroupInfo.h  MessageInfo.cpp  MessageInfo.h  PacketInfo.cpp  PacketInfo.h  UserInfo.cpp  UserInfo.h  main.cpp  predeclare.h
Logic_Part/file/: MyFile.cpp  MyFile.h
Logic_Part/include/: Convert.cpp  Convert.h  db-classes.hpp
Logic_Part/include/feverrpc/: utils.hpp
Logic_Part/src/: ChatHandle.cpp  MacroDefinition.h  UI_Part.cpp  UI_Part.h  UserHandle.cpp  main.cpp
Logic_part/: CMakeLists.txt
Logic_part/include/: Date.h  File_handle.cpp  message_info.cpp  user_info.cpp  user_info.h
Logic_part/src/: AccountHandle.cpp  AccountHandle.h  ChatHandle.cpp  LinkToServer.cpp  LinkToServer.h  account_handle.cpp  account_handle.h  link_to_server.cpp  main.cpp  user_handle.h
Model/: Message.cpp  Message.h  User.h  user_info.h
UI-part/: .gitignore  CMakeLists.txt  Receiver.cpp  Receiver.h  main.cpp  tagets.md  test.cpp
UI-part/Interface/: Chat.h  ChatEntity.h  DateTime.h  Declare.h  Group.h  Message.h  Packet.h  User.h
UI-part/Model/: User.cpp
UI-part/View/: LogIn.cpp  LogIn.h  MainWindow.cpp  MainWindow.h  SignUp.cpp  SignUp.h  ThemeManage.cpp  ThemeManage.h  implement.h  predeclare.h  style.css
UI-part/View/ChatWindow/: ChatList.cpp  ChatList.h  ChatWindow.cpp  ChatWindow.h  Chatting.cpp  Chatting.h  HistroyMessage.cpp  HistroyMessage.h  MessageEdit.cpp  MessageEdit.h  MessageList.cpp  MessageList.h  ShowMessage.cpp  ShowMessage.h  emoji.txt
UI-part/View/ContactWindow/: ContactInfo.cpp  ContactInfo.h  ContactList.cpp  ContactList.h  ContactWindow.cpp  ContactWindow.h  GroupContactInfo.cpp  GroupContactInfo.h  PacketContactInfo.cpp  PacketContactInfo.h
UI-part/View/OtherWindow/: OtherWindow.cpp  OtherWindow.h
UI-part/View/css/: default.css  forest.css  ocean.css  sky.css
UI-part/View/res/: PixMan.cpp  PixMan.h
include/: Chat_Shortcut.cpp  Chat_Shortcut.h  Contact_Shortcut.cpp  Contact_Shortcut.h  Date.cpp  Date.h  File_handle.h  Friend_info.cpp  Friend_info.h  Group_info.cpp  Group_info.h  Macro_Definition.h  Member_Shortcut.cpp  Member_Shortcut.h  constants.h  message_info.h  packet.cpp  packet.h  user_info.cpp
src/: File_handle.cpp  File_handle.h  Filesender.cpp  Filesender.h  Friend_info.h  Friendinfo.cpp  Group_info.cpp  Group_info.h  Shortcut.cpp  Shortcut.h  account.cpp  account.h  account_handle.cpp  link_to_server.h  login_or_regist.cpp  login_or_regist.h  main.cpp  regist.h  test.cpp  user_handle.cpp
